# LU-Data-Visualisation

./: README.md  TASK.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
data/: gaisaTemperatura2022.xlsx  vejaAtrumsBrazmas.xlsx  vejaAtrumsFaktiskais.xlsx
src/data/: read.py  visualize.py
