[project]
name = "LU-Data-analysis-and-visualization"
version = "0.1.0"
description = "2nd homework for University of Latvia Python course - Data analysis and visualization"
authors = [{ name = "Kristofers Solo", email = "dev@kristofers.xyz" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openpyxl==3.1.2",
    "loguru==0.7.2",
    "numpy==1.26.2",
    "matplotlib==3.8.2",
    "pandas==2.1.4",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
line-length = 160

[tool.black]
line-length = 160

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
